--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "startp",
-  "version": "4.0.0",
+  "name": "evolution-it",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
