--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "@types/aos": "^3.0.7",
     "@types/react-responsive-masonry": "^2.1.3",
     "animate.css": "^4.1.1",
@@ -20,13 +21,16 @@
     "react-feather": "^2.0.10",
     "react-responsive-masonry": "^2.2.0",
     "react-tabs": "^6.0.2",
+    "sendgrid": "^5.2.3",
     "sharp": "^0.33.3",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.69",
     "@types/react-dom": "^18.2.22",
+    "@types/validator": "^13.11.10",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.4",
     "typescript": "^5.4.3"
